[package]
name = "qar_raw_dump"
version = "0.2.2"
edition = "2021"
publish = ["rsproxy"]
authors = ["osnosn <osnosn@126.com>"]
description = "Scan raw.dat to determine if it is ALIGNED or BITSTREAM."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexopt = { version = "0.3.0", registry = "rsproxy" }
